# compas_lca_preview

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tasks.py
docs/: api.rst  conf.py  index.rst  installation.rst
docs/api/: compas_lca_preview.rst
latest/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
latest/api/: compas_lca_preview.html
src/compas_lca_preview/: __init__.py  project.py
src/compas_lca_preview/LCI_database/: __init__.py
src/compas_lca_preview/LCI_database/KBOB/: __init__.py
src/compas_lca_preview/LCI_database/OEKOBAUDAT/: __init__.py
src/compas_lca_preview/LCI_database/csv/: __init__.py
src/compas_lca_preview/configs/: master_config.yaml
src/compas_lca_preview/configs/data_filters/filter_presets/medium_LOI/: filter_element.yaml  filter_target_layer.yaml
src/compas_lca_preview/modules/step_01_data_extraction/step_01a_extract_all/: run.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01a_extract_all/methods/: extractor.py  helpers_io.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01b_aggregate_elements/: run.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01b_aggregate_elements/methods/: aggregator.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01c_dissect_layers/: run.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01c_dissect_layers/methods/: dissector.py
src/compas_lca_preview/modules/step_01_data_extraction/step_01d_filter_data/: run.py
src/compas_lca_preview/modules/step_02_material_matching/step_02a_inference/: preview_category_prompt.py  preview_material_prompt.py  run.py
src/compas_lca_preview/modules/step_02_material_matching/step_02a_inference/methods/: llm_interface.py  prompt_builder_category.py  prompt_builder_material.py  traverse.py
src/compas_lca_preview/modules/step_02_material_matching/step_02b_bookkeeping/: run.py
src/compas_lca_preview/modules/step_02_material_matching/step_02b_bookkeeping/methods/: summarize_results.py  utils.py
src/compas_lca_preview/modules/step_03_lca_calculation/step_03a_specific_indicators/: run.py
src/compas_lca_preview/modules/step_03_lca_calculation/step_03b_gross_emissions/: run.py
src/compas_lca_preview/modules/step_04_lca_report/: run.py
src/compas_lca_preview/modules/step_04_lca_report/methods/: plots.py  utils.py
